I don't know how to describe my code but it works! :D

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -5,6 +5,10 @@
  */
 
 /* You can override the default Infima variables here. */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
   --ifm-color-primary: #f22e2f;
   --ifm-color-primary-dark: #e71e1f;
