change homepage header bgcolor

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -30,5 +30,6 @@
   --ifm-color-primary-light: #f26363;
   --ifm-color-primary-lighter: #f29494;
   --ifm-color-primary-lightest: #ffc3c3;
+  --bahas-js-primary-darknight: #1d1c2f;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
