--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -4,15 +4,12 @@
  */
 
 .heroBanner {
-  height: 80vh;
+  height: calc(100vh - 60px);
   padding: 4rem 0;
   text-align: center;
   position: relative;
   overflow: hidden;
-  background-color: var(--ifm-color-primary);
-  background: url("../../static/img/bahasjs-stars.svg");
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-color: #1d1c2f;
 }
 
 @media screen and (max-width: 996px) {
