--- a/src/components/chunks/BeautySentence.module.css
+++ b/src/components/chunks/BeautySentence.module.css
@@ -1,13 +1,3 @@
-@keyframes smallToBig {
-  from {
-    transform: scale(0%);
-    opacity: 0;
-  }
-  to {
-    transform: scale(100%);
-    opacity: 1;
-  }
-}
 @keyframes bigToSmall {
   from {
     transform: scale(100%);
@@ -23,25 +13,10 @@
   position: relative;
 }
 
-.beauty:before {
-  content: "💖";
-  position: absolute;
-  font-size: 8px;
-  top: -30%;
-  left: 30%;
-  transform: scale(0%);
-  opacity: 0;
-  transform-origin: center;
-  animation: smallToBig 800ms infinite ease-in-out;
-}
-
 .beauty:after {
   content: "💖";
-  position: absolute;
-  font-size: 4px;
-  right: 20%;
-  bottom: -20%;
+  font-size: smaller;
   transform: scale(100%);
   transform-origin: center;
-  animation: bigToSmall 900ms infinite ease-in-out;
+  animation: bigToSmall 2000ms infinite ease-in-out;
 }
