--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -17,4 +17,43 @@
   .heroBanner {
     padding: 2rem;
   }
+
+  .world {
+    position: relative;
+    display: block;
+    width: 200px;
+    height: 200px;
+    background-color: #5a9cf2;
+    border-radius: 50%;
+    overflow: hidden;
+  }
+
+  .africa {
+    position: absolute;
+    left: 40%;
+    top: 50%;
+    width: fit-content;
+    height: fit-content;
+  }
+
+  .africa1 {
+    position: absolute;
+    display: block;
+    width: 80px;
+    height: 60px;
+    background-color: #caee66;
+    border-radius: 20px;
+  }
+
+  .africa1:before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 40px;
+    height: 60px;
+    right: 10%;
+    top: 50%;
+    background-color: #caee66;
+    border-radius: 20px;
+  }
 }
